# kdevelop

projectmanagers/: CMakeLists.txt
projectmanagers/qbs/: CMakeLists.txt  qbsimportjob.cpp  qbsimportjob.h  qbsitems.cpp  qbsitems.h  qbskjob.cpp  qbskjob.h  qbsmanager.cpp  qbsmanager.h  qbsprojectconfig.cpp  qbsprojectconfig.h  qbsprojectconfig.ui
